--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/mozilla/page-metadata-parser/issues"
   },
-  "homepage": "https://github.com/mozilla/page-metadata-parser#readme"
+  "homepage": "https://github.com/mozilla/page-metadata-parser#readme",
+  "dependencies": {
+    "wu": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.13.1",
+    "eslint-plugin-mozilla": "0.0.3"
+  },
+  "scripts": {
+    "test:lint": "./node_modules/eslint/bin/eslint.js ."
+  }
 }
