--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "wu": "^2.1.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^2.13.1",
-    "eslint-plugin-mozilla": "0.0.3"
+    "eslint-plugin-mozilla": "0.0.3",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3"
   }
 }
