--- a/.eslintrc
+++ b/.eslintrc
@@ -53,15 +53,15 @@
     "no-invalid-this": 0,
     "no-magic-numbers": 0,
     "no-negated-condition": 0,
-    "no-shadow": 0, // TODO: Change to `1`?
+    "no-shadow": 1,
     "no-trailing-spaces": [2, {"skipBlankLines": false}],
     "no-undef": 2,
     "no-underscore-dangle": 0,
     "no-unused-vars": [2, {"vars": "all", "args": "none"}],
-    "no-warning-comments": 0, // TODO: Change to `1`?
-    "object-curly-spacing": [2, "never"],
     "no-var": 2,
-    "prefer-const": 0, // TODO: Change to `1`?
+    "no-warning-comments": 1,
+    "object-curly-spacing": [2, "never"],
+    "prefer-const": 1,
     "prefer-reflect": 0,
     "quotes": [2, "single", "avoid-escape"],
     "semi": [2, "always"],
