--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "url": "https://github.com/mozilla/page-metadata-parser/issues"
   },
   "dependencies": {
-    "fathom-web": "^1.1.0",
-    "wu": "^2.1.0"
+    "fathom-web": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -19,7 +18,6 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "jsdom": "^9.2.1",
     "karma": "^1.0.0",
-    "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
