--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "fathom-web": "^1.1.2"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "domino": "^1.0.25",
-    "eslint": "^2.13.1",
+    "eslint": "^3.6.1",
     "eslint-plugin-mozilla": "^0.0.3",
     "istanbul": "^0.4.4",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -46,10 +46,11 @@
   },
   "scripts": {
     "cover": "cat ./coverage/lcov/lcov.info | coveralls",
+    "lint": "eslint .",
+    "pretest": "npm run lint",
     "tdd": "npm run test:karma -- --no-single-run",
     "test": "npm-run-all test:*",
     "test:karma": "karma start",
-    "test:lint": "eslint .",
     "test:mocha": "istanbul cover _mocha --report lcovonly -- tests/*.test.js -R spec",
     "clientize": "webpack"
   }
