--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
@@ -51,6 +52,6 @@
     "test:karma": "karma start",
     "test:lint": "eslint .",
     "test:mocha": "istanbul cover _mocha --report lcovonly -- tests/*.test.js -R spec",
-    "clientize": "webpack"
+    "clientize": "webpack --optimize-minimize --optimize-dedupe"
   }
 }
